<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_InfoDataConnection" Id="{1852d4df-fee4-4d6a-8603-2a7502a29b2f}">
    <Declaration><![CDATA[TYPE ST_InfoDataConnection :
STRUCT
	usiMapState	:USINT;
	usiMapDiag	:USINT;
	bySignal	:BYTE;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>